# ttzn_sdk

./: CMakeLists.txt  LICENSE  README.md
cmake/: amd64_toolchain.cmake  arm64_toolchain.cmake  fix_arch_name.cmake  ttzn_sdkConfig.cmake.in
demo/: CMakeLists.txt  README.md  cody_demo.cpp  coroco_demo.cpp
inc/ttzn_sdk/: common.hpp  utils.hpp
inc/ttzn_sdk/cody/: parser.hpp  tran.hpp
inc/ttzn_sdk/coroco/: parser.hpp  tran.hpp
scripts/: ttzn_setup_dev
src/: common.cpp  utils.cpp
src/cody/: parser.cpp  tran.cpp
src/coroco/: parser.cpp  tran.cpp
